--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       </div>
       <!--/.item-->
     </div>
+    <div class="slide-progress"></div>
     <!--/.owl-carousel-->
   </section>
   <!--/#main-slider-->
@@ -189,8 +190,8 @@
       <div class="row">
         <div class="col-sm-6 wow fadeInLeft">
           <h3 class="column-title">Fotos</h3>
-          <div class="main-slider">
-            <div class="owl-carousel" id="slider-fotos">
+          <div class="main-slider" id="slider-fotos">
+            <div class="owl-carousel">
               <div class="item" style="background-image: url(img/embalagem-frente.jpg);">
               </div>
               <div class="item" style="background-image: url(img/embalagem-verso.jpg);">
@@ -198,12 +199,13 @@
               <div class="item" style="background-image: url(img/polenta3.jpg);">
               </div>
             </div>
+            <div class="slider-progress"></div>
           </div>
         </div>
 
         <div id="empresa-malhas" class="col-sm-6 wow fadeInRight">
           <h3 class="column-title">El Chefe</h3>
-          <p align="justify">É Uma empresa prestadora de serviços na área de facção de malhas e estamparia que utiliza teares circulares para
+          <p align="justify">É uma empresa prestadora de serviços na área de facção de malhas e estamparia que utiliza teares circulares para
             a fabricação e estamparia automática, Carrossel, aumentando a qualidade dos produtos oferecidos.</p>
 
           <p align="justify">Está situada em um dos maiores pólos têxteis do país tendo nas suas proximidades vários prestadores de serviço
@@ -359,7 +361,7 @@
                   <h2 style="visibility: visible; animation-name: none;" class="section-title text-center wow fadeInDown">Tecelagem</h2>
                 </div>
                 -->
-                <img class="img-fluid img-centered" src="img/img01.png" alt="">
+                <img class="img-fluid img-centered" src="img/polenta3.jpg" alt="">
               </div>
             </div>
             <div class="col-md-2 arrow-next">
@@ -390,7 +392,7 @@
                   <h2 style="visibility: visible; animation-name: none;" class="section-title text-center wow fadeInDown">Estamparia</h2>
                 </div>
                 -->
-                <img class="img-fluid img-centered" src="img/img02.png" alt="">
+                <img class="img-fluid img-centered" src="img/polenta3.jpg" alt="">
               </div>
             </div>
             <div class="col-md-2 arrow-next">
@@ -421,7 +423,7 @@
                   <h2 style="visibility: visible; animation-name: none;" class="section-title text-center wow fadeInDown">Serviços</h2>
                 </div>
                 -->
-                <img class="img-fluid img-centered" src="img/img03.png" alt="">
+                <img class="img-fluid img-centered" src="img/polenta3.jpg" alt="">
               </div>
             </div>
             <div class="col-md-2 arrow-next">
