--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="nav-link js-scroll-trigger" href="#main-slider">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Serviços</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Produtos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Empresa</a>
@@ -61,18 +61,6 @@
   <section id="main-slider" class="main-slider">
     <div class="owl-carousel">
       <div class="item" style="background-image: url(img/banner.jpg);">
-        <div class="slider-inner">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="carousel-content">
-                  <h2 class="padding-slider">
-                    <span>El </span> Chefe </h2>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
       <!--/.item-->
       <div class="item" style="background-image: url(img/embalagem-frente.jpg);">
@@ -83,8 +71,7 @@
                 <div class="carousel-content">
                   <h2 class="padding-slider-b">
                     <span>El</span> Chefe</h2>
-                  <p class="padding-slider-t" align="justify">Uma prestadora de serviços na área de facção de malhas que utiliza teares circulares na fabricação de produtos
-                    para a indústria têxtil, também contém os serviços de estamparia com máquinas carrossel.</p>
+                  <p class="padding-slider-t" align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
               </div>
             </div>
@@ -101,7 +88,7 @@
   <section id="portfolio">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title text-center wow fadeInDown">Serviços</h2>
+        <h2 class="section-title text-center wow fadeInDown">Produtos</h2>
       </div>
       <div class="row">
         <div class="col-sm-4 portfolio-item">
@@ -167,14 +154,7 @@
         </div
         -->
       </div>
-      <h3 id="parque" class="column-title">Parque Fabril</h3>
-      <div class="row">
-        <ul class="nostyle pdr-15">
-          <li>
-            <i class="fa fa-check-square"></i> Galpão com 2350m2 de área;</li>
-        </ul>
-      </div>
-    </div>
+    
     </div>
   </section>
 
@@ -184,7 +164,7 @@
 
       <div class="section-header">
         <h2 class="section-title text-center wow fadeInDown">Empresa</h2>
-        <p class="text-center wow fadeInDown">Fundada por Juliano Kozoski em 15 de julho de 2010, localizada em Gaspar - Santa Catarina</p>
+        <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 
       <div class="row">
@@ -196,8 +176,6 @@
               </div>
               <div class="item" style="background-image: url(img/embalagem-verso.jpg);">
               </div>
-              <div class="item" style="background-image: url(img/polenta3.jpg);">
-              </div>
             </div>
             <div class="slider-progress"></div>
           </div>
@@ -205,13 +183,9 @@
 
         <div id="empresa-malhas" class="col-sm-6 wow fadeInRight">
           <h3 class="column-title">El Chefe</h3>
-          <p align="justify">É uma empresa prestadora de serviços na área de facção de malhas e estamparia que utiliza teares circulares para
-            a fabricação e estamparia automática, Carrossel, aumentando a qualidade dos produtos oferecidos.</p>
+          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-          <p align="justify">Está situada em um dos maiores pólos têxteis do país tendo nas suas proximidades vários prestadores de serviço
-            nas áreas de tinturaria e confecção, assim como vendedores de fios conhecidos nacionalmente, o que facilita a
-            logística de seus clientes. Buscamos através de um atendimento personalizado e com parcerias entre fornecedores
-            e clientes o melhor custo benefício para todos.</p>
+          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <div class="row">
             <ul class="nostyle pdr-15">
               <li>
@@ -234,8 +208,8 @@
         <div class="col-sm-6 wow fadeInLeft">
           <h3 class="column-title">Localização</h2>
             <p class="missao" align="justify">
-              Endereço: Rodovia Ivo Silveira – 6398 (Fundos) – Alto Gasparinho – Gaspar – 89113-250
-              <br/> Telefone : (47) 3318.0732 / (47) 99208.8390
+              Endereço: Rua, número – Bairro – Cidade – CEP
+              <br/> Telefone : Número / Celular
               <i class="fa fa-whatsapp" aria-hidden="true"></i>
             </p>
             <div id="map1" class="map">
