--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     </div>
   </div>
 -->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyAMr-NBCaXpc947AwTuNYwUWTi57vW0-Bk"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAMr-NBCaXpc947AwTuNYwUWTi57vW0-Bk"></script>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/popper/popper.min.js"></script>
