--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <div class="carousel-content">
                   <h2 class="padding-slider-b">
                     <span>El</span> Chefe</h2>
-                  <p class="padding-slider-t" align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="padding-slider-t" align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua.</p>
                 </div>
               </div>
             </div>
@@ -99,7 +100,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/polenta1.jpg" alt="">
+            <img class="img-fluid" src="img/produto1.png" alt="">
           </a>
         </div>
         <div class="col-sm-4 portfolio-item">
@@ -109,7 +110,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/polenta2.jpg" alt="">
+            <img class="img-fluid" src="img/produto2.png" alt="">
           </a>
         </div>
         <div class="col-sm-4 portfolio-item">
@@ -119,7 +120,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/polenta3.jpg" alt="">
+            <img class="img-fluid" src="img/produto3.png" alt="">
           </a>
         </div>
         <!--
@@ -155,7 +156,7 @@
         </div
         -->
       </div>
-    
+
     </div>
   </section>
 
@@ -165,7 +166,6 @@
 
       <div class="section-header">
         <h2 class="section-title text-center wow fadeInDown">Empresa</h2>
-        <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 
       <div class="row">
@@ -175,7 +175,7 @@
             <div class="owl-carousel">
               <div class="item" style="background-image: url(img/embalagem-frente.jpg);">
               </div>
-              <div class="item" style="background-image: url(img/embalagem-verso.jpg);">
+              <div class="item produto" style="background-image: url(img/produto2.png);">
               </div>
             </div>
             <div class="slider-progress"></div>
@@ -184,15 +184,20 @@
 
         <div id="empresa-malhas" class="col-sm-6 wow fadeInRight">
           <h3 class="column-title">El Chefe</h3>
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <p align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p align="justify">A el Chef industria de alimentos foi fundada em 2008 na cidade de Gaspar - SC,
+            com foco na produção de Polenta Congelada de qualidade garantindo um sabor caseiro e crocancia inigualável, 
+            a empresa possui todos os equipamentos adequados e autorizados pelos órgãos de vigentes.
+            Seus Clientes são compostos por restaurantes, pizzarias, hotéis, atacados. 
+            Atua em parceria com grandes atacados que levam nossos produtos até sua residência, 
+            garantimos a eficiência e rapidez na entrega.</p>
           <div class="row">
             <ul class="nostyle pdr-15">
               <li>
-                <i class="fa fa-check-square"></i>Polentas Congeladas;</li>
+                <i class="fa fa-check-square"></i>Polenta Tablete;</li>
               <li>
-                <i class="fa fa-check-square"></i>Polentas Palitos;</li>
+                <i class="fa fa-check-square"></i>Polenta Cubo;</li>
+              <li>
+                <i class="fa fa-check-square"></i>Polenta Palito.</li>
             </ul>
           </div>
         </div>
@@ -217,7 +222,7 @@
             </div>
         </div>
         <div id="contato" class="col-sm-6 wow fadeInRight">
-          <h3 class="column-title">Contato</h2>
+          <h3 class="column-title">Faça seu pedido aqui</h2>
             <div class="row">
               <div class="col-lg-8">
                 <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
@@ -297,8 +302,7 @@
           </div>
         -->
           <div class="footer-col">
-            <h3>El Chef</h3>
-            <p>O jeito fácil de fazer polenta.</p>
+            <img class="img-fluid" src="img/logo-footer.png" alt="">
           </div>
         </div>
       </div>
@@ -307,7 +311,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            Copyright &copy; El Chef 2017
+            <p>Copyright &copy; El Chef 2017</p> <p>| Desenvolvido por
+              <a class="aznicsis" href="https://aznicsis.com.br/" target="_blank">Vulpis</a></p>
           </div>
         </div>
       </div>
@@ -336,7 +341,7 @@
                   <h2 style="visibility: visible; animation-name: none;" class="section-title text-center wow fadeInDown">Tecelagem</h2>
                 </div>
                 -->
-                <img class="img-fluid img-centered" src="img/polenta3.jpg" alt="">
+                <img class="img-fluid img-centered" src="img/produto1.png" alt="">
               </div>
             </div>
             <div class="col-md-2 arrow-next">
@@ -367,7 +372,7 @@
                   <h2 style="visibility: visible; animation-name: none;" class="section-title text-center wow fadeInDown">Estamparia</h2>
                 </div>
                 -->
-                <img class="img-fluid img-centered" src="img/polenta3.jpg" alt="">
+                <img class="img-fluid img-centered" src="img/produto2.png" alt="">
               </div>
             </div>
             <div class="col-md-2 arrow-next">
@@ -398,7 +403,7 @@
                   <h2 style="visibility: visible; animation-name: none;" class="section-title text-center wow fadeInDown">Serviços</h2>
                 </div>
                 -->
-                <img class="img-fluid img-centered" src="img/polenta3.jpg" alt="">
+                <img class="img-fluid img-centered" src="img/produto3.png" alt="">
               </div>
             </div>
             <div class="col-md-2 arrow-next">
