--- a/index.html
+++ b/index.html
@@ -61,23 +61,22 @@
   </nav>
   <section id="main-slider" class="main-slider">
     <div class="owl-carousel">
-      <div class="item" style="background-image: url(img/banner.jpg);">
+      <div class="item" style="background-image: url(img/embalagem-frente.jpg);">
       </div>
       <!--/.item-->
-      <div class="item" style="background-image: url(img/embalagem-frente.jpg);">
+      <div class="item produto" style="background-image: url(img/produto1.png);">
         <div class="slider-inner">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <div class="carousel-content">
-                  <h2 class="padding-slider-b">
-                    <span>El</span> Chefe</h2>
-                  <p class="padding-slider-t" align="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+          <h2 class="padding-slider-b">
+            <span>El</span> Chefe</h2>
+          <p class="padding-slider-t" align="justify">O jeito fácil de fazer polenta.</p>
+        </div>
+      </div>
+      <div class="item" style="background-image: url(img/embalagem-frente.jpg);"></div>
+      <div class="item produto" style="background-image: url(img/produto1.png);">
+        <div class="slider-inner">
+          <h2 class="padding-slider-b">
+            <span>El</span> Chefe</h2>
+          <p class="padding-slider-t" align="justify">O jeito fácil de fazer polenta.</p>
         </div>
       </div>
       <!--/.item-->
@@ -184,12 +183,11 @@
 
         <div id="empresa-malhas" class="col-sm-6 wow fadeInRight">
           <h3 class="column-title">El Chefe</h3>
-          <p align="justify">A el Chef industria de alimentos foi fundada em 2008 na cidade de Gaspar - SC,
-            com foco na produção de Polenta Congelada de qualidade garantindo um sabor caseiro e crocancia inigualável, 
-            a empresa possui todos os equipamentos adequados e autorizados pelos órgãos de vigentes.
-            Seus Clientes são compostos por restaurantes, pizzarias, hotéis, atacados. 
-            Atua em parceria com grandes atacados que levam nossos produtos até sua residência, 
-            garantimos a eficiência e rapidez na entrega.</p>
+          <p align="justify">A el Chef industria de alimentos foi fundada em 2008 na cidade de Gaspar - SC, com foco na produção de Polenta
+            Congelada de qualidade garantindo um sabor caseiro e crocancia inigualável, a empresa possui todos os equipamentos
+            adequados e autorizados pelos órgãos de vigentes. Seus Clientes são compostos por restaurantes, pizzarias, hotéis,
+            atacados. Atua em parceria com grandes atacados que levam nossos produtos até sua residência, garantimos a eficiência
+            e rapidez na entrega.</p>
           <div class="row">
             <ul class="nostyle pdr-15">
               <li>
@@ -214,8 +212,8 @@
         <div class="col-sm-6 wow fadeInLeft">
           <h3 class="column-title">Localização</h2>
             <p class="missao" align="justify">
-              Endereço: Rua, número – Bairro – Cidade – CEP
-              <br/> Telefone : Número / Celular
+              Endereço: Rua Itajaí, 722 - Sete de Setembro – Gaspar
+              <br/> Telefone : (47) 3332-2850 / (47) 99979-6296
               <i class="fa fa-whatsapp" aria-hidden="true"></i>
             </p>
             <div id="map1" class="map">
@@ -311,8 +309,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; El Chef 2017</p> <p>| Desenvolvido por
-              <a class="aznicsis" href="https://aznicsis.com.br/" target="_blank">Vulpis</a></p>
+            <p>Copyright &copy; El Chef 2017</p>
+            <p>| Desenvolvido por
+              <a class="aznicsis" href="https://aznicsis.com.br/" target="_blank">Vulpis</a>
+            </p>
           </div>
         </div>
       </div>
