--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </nav>
   <section id="main-slider" class="main-slider">
     <div class="owl-carousel">
-      <div class="item" style="background-image: url(img/embalagem-frente.jpg);">
+      <div class="item notProduto" style="background-image: url(img/embalagem-frente.jpg);">
       </div>
       <!--/.item-->
       <div class="item produto" style="background-image: url(img/produto1.png);">
@@ -71,7 +71,7 @@
           <p class="padding-slider-t" align="justify">O jeito fácil de fazer polenta.</p>
         </div>
       </div>
-      <div class="item" style="background-image: url(img/embalagem-frente.jpg);"></div>
+      <div class="item notProduto" style="background-image: url(img/embalagem-frente.jpg);"></div>
       <div class="item produto" style="background-image: url(img/produto1.png);">
         <div class="slider-inner">
           <h2 class="padding-slider-b">
@@ -172,7 +172,7 @@
           <h3 class="column-title">Fotos</h3>
           <div class="main-slider" id="slider-fotos">
             <div class="owl-carousel">
-              <div class="item" style="background-image: url(img/embalagem-frente.jpg);">
+              <div class="item notProduto" style="background-image: url(img/embalagem-frente.jpg);">
               </div>
               <div class="item produto" style="background-image: url(img/produto2.png);">
               </div>
