--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>El Chefe</title>
+  <title>El Chef</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@
       <div class="item produto" style="background-image: url(img/produto1.png);">
         <div class="slider-inner">
           <h2 class="padding-slider-b">
-            <span>El</span> Chefe</h2>
+            <span>El</span> Chef</h2>
           <p class="padding-slider-t" align="justify">O jeito fácil de fazer polenta.</p>
         </div>
       </div>
@@ -75,7 +75,7 @@
       <div class="item produto" style="background-image: url(img/produto1.png);">
         <div class="slider-inner">
           <h2 class="padding-slider-b">
-            <span>El</span> Chefe</h2>
+            <span>El</span> Chef</h2>
           <p class="padding-slider-t" align="justify">O jeito fácil de fazer polenta.</p>
         </div>
       </div>
@@ -172,7 +172,7 @@
           <h3 class="column-title">Fotos</h3>
           <div class="main-slider" id="slider-fotos">
             <div class="owl-carousel">
-              <div class="item notProduto" style="background-image: url(img/embalagem-frente.jpg);">
+              <div class="item notProduto" style="background-image: url(img/polenta1.jpg);">
               </div>
               <div class="item produto" style="background-image: url(img/produto2.png);">
               </div>
@@ -182,7 +182,7 @@
         </div>
 
         <div id="empresa-malhas" class="col-sm-6 wow fadeInRight">
-          <h3 class="column-title">El Chefe</h3>
+          <h3 class="column-title">El Chef</h3>
           <p align="justify">A el Chef industria de alimentos foi fundada em 2008 na cidade de Gaspar - SC, com foco na produção de Polenta
             Congelada de qualidade garantindo um sabor caseiro e crocancia inigualável, a empresa possui todos os equipamentos
             adequados e autorizados pelos órgãos de vigentes. Seus Clientes são compostos por restaurantes, pizzarias, hotéis,
@@ -301,6 +301,7 @@
         -->
           <div class="footer-col">
             <img class="img-fluid" src="img/logo-footer.png" alt="">
+            <p class="slogan">O jeito fácil de fazer polenta</p>
           </div>
         </div>
       </div>
