--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
 
       <div class="row">
         <div class="col-sm-6 wow fadeInLeft">
-          <h3 class="column-title">Fotos</h3>
+          <h3 class="column-title">Polenta Palito agora com embalagem com 400g, mais praticidade para o seu dia a dia</h3>
           <div class="main-slider" id="slider-fotos">
             <div class="owl-carousel">
-              <div class="item notProduto" style="background-image: url(img/polenta1.jpg);">
+              <div class="item notProduto" style="background-image: url(img/embalagem-frente.jpg);">
               </div>
-              <div class="item produto" style="background-image: url(img/produto2.png);">
+              <div class="item produto" style="background-image: url(img/polenta1.jpg);">
               </div>
             </div>
             <div class="slider-progress"></div>
