ajuste font title

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
       <div class="row">
         <div class="col-sm-6 wow fadeInLeft">
-          <h3 class="column-title">Polenta Palito agora com embalagem com 400g, mais praticidade para o seu dia a dia</h3>
+          <h3 class="column-title fs1-25rem">Polenta Palito agora com embalagem com 400g, mais praticidade para o seu dia a dia</h3>
           <div class="main-slider" id="slider-fotos">
             <div class="owl-carousel">
               <div class="item notProduto" style="background-image: url(img/embalagem-frente.jpg);">
