--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="col-sm-6 wow fadeInLeft">
           <h3 class="column-title">Localização</h2>
             <p class="missao" align="justify">
-              Endereço: Rua Itajaí, 722 - Sete de Setembro – Gaspar
+              Endereço: Rua Itajaí, 722 - Sete de Setembro – Gaspar - SC
               <br/> Telefone : (47) 3332-2850 / (47) 99979-6296
               <i class="fa fa-whatsapp" aria-hidden="true"></i>
             </p>
