--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-6 wow fadeInLeft">
+        <div class="temp"></div>
+        <div class="col-sm-6 wow fadeInLeft col1">
           <h3 class="column-title fs1-25rem">Polenta Palito agora com embalagem com 400g, mais praticidade para o seu dia a dia</h3>
           <div class="main-slider" id="slider-fotos">
             <div class="owl-carousel">
@@ -181,7 +182,7 @@
           </div>
         </div>
 
-        <div id="empresa-malhas" class="col-sm-6 wow fadeInRight">
+        <div id="empresa-malhas" class="col-sm-6 wow fadeInRight col2">
           <h3 class="column-title">El Chef</h3>
           <p align="justify">A el Chef industria de alimentos foi fundada em 2008 na cidade de Gaspar - SC, com foco na produção de Polenta
             Congelada de qualidade garantindo um sabor caseiro e crocancia inigualável, a empresa possui todos os equipamentos
