--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             </div>
             <img class="img-fluid" src="img/produto1.png" alt="">
           </a>
+          <p class="text-center mt-1">Polenta Palito</p>
         </div>
         <div class="col-sm-4 portfolio-item">
           <a class="portfolio-link" href="#portfolioModal2" data-toggle="modal">
@@ -111,6 +112,7 @@
             </div>
             <img class="img-fluid" src="img/produto2.png" alt="">
           </a>
+          <p class="text-center mt-1">Polenta Cubo</p>
         </div>
         <div class="col-sm-4 portfolio-item">
           <a class="portfolio-link" href="#portfolioModal3" data-toggle="modal">
@@ -121,6 +123,7 @@
             </div>
             <img class="img-fluid" src="img/produto3.png" alt="">
           </a>
+          <p class="text-center mt-1">Polenta Tablete</p>
         </div>
         <!--
         <div class="col-sm-4 portfolio-item">
@@ -155,18 +158,15 @@
         </div
         -->
       </div>
-
     </div>
   </section>
 
   <!-- About Section -->
   <section id="about">
     <div class="container">
-
       <div class="section-header">
         <h2 class="section-title text-center wow fadeInDown">Empresa</h2>
       </div>
-
       <div class="row">
         <div class="temp"></div>
         <div class="col-sm-6 wow fadeInLeft col1">
@@ -181,7 +181,6 @@
             <div class="slider-progress"></div>
           </div>
         </div>
-
         <div id="empresa-malhas" class="col-sm-6 wow fadeInRight col2">
           <h3 class="column-title">El Chef</h3>
           <p align="justify">A el Chef industria de alimentos foi fundada em 2008 na cidade de Gaspar - SC, com foco na produção de Polenta
@@ -189,6 +188,7 @@
             adequados e autorizados pelos órgãos de vigentes. Seus Clientes são compostos por restaurantes, pizzarias, hotéis,
             atacados. Atua em parceria com grandes atacados que levam nossos produtos até sua residência, garantimos a eficiência
             e rapidez na entrega.</p>
+          <!--
           <div class="row">
             <ul class="nostyle pdr-15">
               <li>
@@ -199,6 +199,7 @@
                 <i class="fa fa-check-square"></i>Polenta Palito.</li>
             </ul>
           </div>
+          -->
         </div>
       </div>
     </div>
@@ -332,6 +333,7 @@
           </div>
         </div>
         <div class="container">
+            <p class="modal-title">Polenta Palito</p>
           <div class="row">
             <div class="col-md-2 arrow-previous">
               <i class="fa fa-chevron-left previous" aria-hidden="true"></i>
@@ -363,6 +365,7 @@
           </div>
         </div>
         <div class="container">
+            <p class="modal-title">Polenta Cubo</p>
           <div class="row">
             <div class="col-md-2 arrow-previous">
               <i class="fa fa-chevron-left previous" aria-hidden="true"></i>
@@ -394,7 +397,8 @@
           </div>
         </div>
         <div class="container">
-          <div class="row">
+            <p class="modal-title">Polenta Tablete</p>
+          <div class="row">  
             <div class="col-md-2 arrow-previous">
               <i class="fa fa-chevron-left previous" aria-hidden="true"></i>
             </div>
