--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <div class="col-lg-12">
             <p>Copyright &copy; El Chef 2017</p>
             <p>| Desenvolvido por
-              <a class="aznicsis" href="https://aznicsis.com.br/" target="_blank">Vulpis</a>
+              <a class="vulpis" href="https://vulpis.tech/" target="_blank">Vulpis</a>
             </p>
           </div>
         </div>
